# mainnet-growverse-v2.0

./: .dockerignore  .gitignore  .replit  CLONE_ROOM_QA_REPORT.md  CONTRIBUTING.md  Dockerfile  fly.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
growpod/: .dockerignore  .env.example  .gitignore  .replit  BUILDLOG.md  CLAUDE.md  CLAUDE_SESSION_NOTES.md  Dockerfile  HANDOFF.md  LOCAL_SETUP.md  Makefile  README.md  SECURITY.md  SECURITY_AUDIT.md  SESSION-LOG.md  TESTENV.md  fly.toml  growpod.db-shm  growpod.db-wal  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  replit.md  requirements.txt  server.py  setup.py
growpod/.claude/: settings.json
growpod/alembic/: env.py
growpod/attached_assets/: Pasted-This-repo-GROWv2-package-growpodempire-is-a-two-part-ap_1780939848163.txt
growpod/docs/: 00_PROJECT_CONTEXT.md  01_GROWVERSE_CURRENT_STATUS 2.md  03_PLAYABLE_CORE_V1_SPEC.md  04_ENV_VARS_INVENTORY.md  05_DEPLOYMENT_AND_DOMAIN_PLAN.md  07_OWNER_RULES_AND_SAFETY.md  08_VERIFICATION_CHECKLIST.md  09_MISSION_CONTROL_SYNC.md  AGENT_ORCHESTRATION_LEDGER.md  ALGORAND_DEV.md  BUD_ARCHITECTURE_BLUEPRINT.md  BUILD_RULES.md  DATABASE_SYSTEMS_AUDIT.md  DEPLOY_FLY.md  DEV_BUILD_LOG.md  ECONOMY_CONTROL_PLANE.md  ECONOMY_LAUNCH_PROFILE.md  GLOBAL_EVIDENCE_MEMORY_LAYER.md  GROWVERSE.md  HANDOFF.md  NEXT_SESSION_SPRINT3.md  OMNI_CHARTER.md  PHASE1_ECONOMY_DB.md  PHASE2_SIMULATION.md  PHASE3_ONCHAIN.md  QA_AUDIT.md  RENDERING_ARCHITECTURE.md  ROADMAP.md  SESSION_PROTOCOL.md  SIMULATION_TEST_CLOCK.md  STEP4_E2E_GROW_LOOP_VALIDATION.md  STUDIO_AGENT_REGISTRY.md  TESTER_RUNBOOK.md  (+1 more)
(+939 files in other folders)
