[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.2",
    "anthropic>=0.109.2",
    "flask==2.3.2",
    "flask-cors==4.0.0",
    "flask-limiter==3.5.0",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
    "py-algorand-sdk==2.11.1",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.2",
    "sqlalchemy==2.0.23",
    "werkzeug==2.3.7",
]
